2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Read user access rights directly from a_pytis_computed_summary_rights db table.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Display column names in the rights editing side form.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix displaying extended menu in the role editing multiform.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix checking for system rights presence in the summary rights computation.

2009-09-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix invalid _update_rights call in e_pytis_role_members_trigger.

2009-09-11  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fixes in the next menu position computation in e_pytis_menu_trigger.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Additional reports in `genmenu --check-update'.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	Genmenu documented.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Minor improvements of genmenu messages.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add `Note:' prefix to genmenu notification messages.

2009-09-10  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* doc/tutorials/dmp:
	DMP documentation updated.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Remove obsolete db column c_pytis_menu_actions.parent_action.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Fix crash in menu editing of multiform rights.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fixes of subforms definitions in genmenu.

2009-09-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Use proper order of subforms when determining multiform access rights.

2009-09-07  Milan Zamazal  <pdm@brailcom.org>
