@@ -1,5 +1,10 @@
 2009-09-15  Milan Zamazal  <pdm@brailcom.org>
 
+	* lib/pytis/presentation/spec.py:
+	Fix column limiting of user rights by system rights.
+
+2009-09-15  Milan Zamazal  <pdm@brailcom.org>
+
 	* db/db_pytis_menu.py:
 	Read user access rights directly from a_pytis_computed_summary_rights db table.
 
